5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1635_1055.log
== TEST (2019-04-10 01:31:52) 
-- CODE:
v0 = float(input(""))
a = radians(float(input (""))
D = float(input(" "))
				
R = ((v0 ** 2) * sin(2a)/(g))
				



-- ERROR:
File "XXXX", line 3
    D = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:32:17) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
D = float(input(" "))
				
R = ((v0 ** 2) * sin(2a)/(g))
				



-- ERROR:
File "XXXX", line 3
    D = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:32:27) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
d = float(input(""))
				
R = ((v0 ** 2) * sin(2a)/(g))
				



-- ERROR:
File "XXXX", line 3
    d = float(input(""))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:32:38) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
d = float(input(" "))
				
R = ((v0 ** 2) * sin(2a)/(g))
				



-- ERROR:
File "XXXX", line 3
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:32:47) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
d = float(input(" "))		
R = ((v0 ** 2) * sin(2a)/(g))
				



-- ERROR:
File "XXXX", line 3
    d = float(input())		
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:33:21) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
d = float(input(" "))		
R = ((v0 ** 2) * sin(2a)/(g))
				



-- ERROR:
File "XXXX", line 3
    d = float(input())		
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:33:38) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
d =  float(input(" "))		
R = ((v0 ** 2) * sin(2a)/(g))
				


-- ERROR:
File "XXXX", line 3
    d =  float(input())		
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:33:51) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
d =  float(input (" "))		
R = ((v0 ** 2) * sin(2a)/(g))
				


-- ERROR:
File "XXXX", line 3
    d =  float(input())		
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:34:01) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))

R = ((v0 ** 2) * sin(2a)/(g))
				


-- ERROR:
File "XXXX", line 4
    R = ((v0 ** 2) * sin(2a)/(g))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:39:41) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))

R = ((v0 ** 2) * sin(2a)/(g))
				


-- ERROR:
File "XXXX", line 4
    R = ((v0 ** 2) * sin(2a)/(g))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:42:30) 
-- CODE:
vo = float(input(""))
a =  radians(float(input (""))

R = ((vo ** 2) * sin(2a)/(g))
				


-- ERROR:
File "XXXX", line 4
    R = ((vo ** 2) * sin(2a)/(g))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:42:53) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
				 
from math import*
R = ((vo ** 2) * sin(2a)/(g))
				


-- ERROR:
File "XXXX", line 4
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:43:05) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
				 
from math import*
R = ((v0 ** 2) * sin(2a)/(g))
				


-- ERROR:
File "XXXX", line 4
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 01:43:17) 
-- CODE:
v0 = float(input(""))
a =  radians(float(input (""))
				 
from math import*
R = (v0 ** 2) * sin(2a)/(g)
				


-- ERROR:
File "XXXX", line 4
    from math import*
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:16:35) 
-- CODE:
V0 = float(input(""))
a = radians(float(input(""))
D = float(input(""))

				


-- ERROR:
File "XXXX", line 3
    D = float(input(""))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:16:49) 
-- CODE:
V0 = float(input(""))
a = radians(float(input(""))
d = float(input(""))

				


-- ERROR:
File "XXXX", line 3
    d = float(input(""))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:17:03) 
-- CODE:
V0 = float(input(""))
a = radians(float(input("")
d = float(input(""))

				


-- ERROR:
File "XXXX", line 3
    d = float(input(""))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 02:17:21) 
-- CODE:
V0 = float(input(""))
a = radians(float(input(""))
d = float (input(""))

				


-- ERROR:
File "XXXX", line 3
    d = float (input(""))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:20) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
a= radians(float(input("Digite alpha"))
d = float (input("Digite distância"))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< (0.1):
	print("sim")
else:
	print("nao")

				


-- ERROR:
File "XXXX", line 4
    d = float (input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:30) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
a= radians(float(input("Digite alpha"))
d = float (input("Digite distancia"))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< (0.1):
	print("sim")
else:
	print("nao")

				


-- ERROR:
File "XXXX", line 4
    d = float (input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:23:48) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
a= radians(float(input("Digite alpha"))
d = float (input("Digite distancia"))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< (0.1):
	print("sim")
else:
	print("nao")

				


-- ERROR:
File "XXXX", line 4
    d = float (input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:24:01) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
a= radians(float(input("Digite alpha"))
d = float (input("digite distancia"))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< (0.1):
	print("sim")
else:
	print("nao")

				


-- ERROR:
File "XXXX", line 4
    d = float (input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:24:15) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
a= radians(float(input("Digite alpha"))
d = float (input("digite distancia: "))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< (0.1):
	print("sim")
else:
	print("nao")

				


-- ERROR:
File "XXXX", line 4
    d = float (input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:24:28) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
alpha = radians(float(input("Digite alpha"))
d = float (input("digite distancia: "))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< (0.1):
	print("sim")
else:
	print("nao")

				


-- ERROR:
File "XXXX", line 4
    d = float (input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:24:39) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
alpha = radians(float(input("Digite alpha"))
d = float(input("digite distancia: "))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< (0.1):
	print("sim")
else:
	print("nao")

				


-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:24:42) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
alpha = radians(float(input("Digite alpha"))
d = float(input("digite distancia: "))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< (0.1):
	print("sim")
else:
	print("nao")

				


-- EXECUTION TIME:
0.142427
-- ERROR:
  File "/home/codebench/codes/1635/1055/main.py", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:24:56) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
alpha = radians(float(input("Digite alpha"))
d = float(input("digite distancia: "))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< 0.1):
	print("sim")
else:
	print("nao")

				


-- ERROR:
File "XXXX", line 4
    d = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:25:29) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
alpha = radians(float(input("Digite alpha:")))
d = float(input("digite distância: "))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< 0.1):
	print("sim")
else:
	print("nao")

				


-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 18:25:34) 
-- CODE:
from math import* 
Vo = float(input("Digite vo: "))
alpha = radians(float(input("Digite alpha:")))
d = float(input("digite distância: "))
			  
g = 9.8 
R = (Vo ** 2 * sin (2*alpha))/g

if(abs(d - R)< 0.1):
	print("sim")
else:
	print("nao")

				


-- EXECUTION TIME:
0.133069
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
